# raycasting-engine

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  compile_flags.txt  raycast.rar
.devcontainer/: Dockerfile  devcontainer.json
include/: Game.hpp  Image.hpp  Map.hpp  Player.hpp  Sprite.hpp  Window.hpp
includes/: Player.hpp  Sprite.hpp
maps/: map1.txt  map2.txt
src/: Game.cpp  Image.cpp  Map.cpp  Player.cpp  Sprite.cpp  Window.cpp  keyCallback.cpp  main.cpp
srcs/: Map.cpp
